--- a/1.html
+++ b/1.html
@@ -4,6 +4,6 @@
 	<title></title>
 </head>
 <body>
-	<a href="itms-services://?action=download-manifest&url="></a>>
+	<a href="itms-services://?action=download-manifest&url=https://github.com/jackHappyDev/xx/blob/master/install.plist"></a>
 </body>
 </html>>
